--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "purescript-aff": "~0.12.0",
     "purescript-console": "^0.1.0",
-    "purescript-functions": "~0.1.0"
+    "purescript-functions": "~0.1.0",
+    "purescript-node-buffer": "~0.1.0"
   }
 }
