--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "purescript-aff": "~0.12.0",
     "purescript-console": "^0.1.0",
+    "purescript-exceptions": "~0.3.0",
     "purescript-functions": "~0.1.0",
     "purescript-node-buffer": "~0.1.0"
   }
