--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,11 @@
     "purescript-console": "^0.1.0",
     "purescript-exceptions": "~0.3.0",
     "purescript-functions": "~0.1.0",
-    "purescript-node-buffer": "~0.1.0"
+    "purescript-node-buffer": "~0.1.0",
+    "purescript-aff-coroutines": "~0.4.0"
+  },
+  "resolutions": {
+    "purescript-aff": "^0.13.0",
+    "purescript-transformers": "~0.8.1"
   }
 }
